--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="container">
     <div class="card">
         <div class="img">
-            <img src="ignore/images/image-qr-code.png" alt="qr-img">
+            <img src="images/image-qr-code.png" alt="qr-img">
         </div>
         <div class="text">
             <p>Improve your front-end skills by building projects</p>
