finished till Preparation

--- a/Recipe page/index.html
+++ b/Recipe page/index.html
@@ -13,6 +13,26 @@
     <title>Recipe-page</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="card">
+            <div class="img">
+                <img src="images/image-omelette.jpeg" alt="">
+            </div>
+            <div class="recipe">
+                <div class="head">
+                    <h3>Simple Omelette Recipe</h3>
+                    <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
+                </div>
+                <div class="Preparation">
+                    <h3>Preparation time</h3>
+                    <ul>
+                        <li><span>Total: </span>Approximately 10 minutes</li>
+                        <li><span>Preparation: </span>5 minutes</li>
+                        <li><span>Cooking: </span>5 minutes</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
