--- a/Recipe page/index.html
+++ b/Recipe page/index.html
@@ -31,6 +31,29 @@
                         <li><span>Cooking: </span>5 minutes</li>
                     </ul>
                 </div>
+                <div class="Ingredients">
+                    <h3>Ingredients</h3>
+                    <ul>
+                        <li>2-3 large eggs</li>
+                        <li>Salt, to taste</li>
+                        <li>Pepper, to taste</li>
+                        <li>1 tablespoon of butter or oil</li>
+                        <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+                    </ul>
+                </div>
+                <hr>
+                <div class="Instructions">
+                    <h3>Instructions</h3>
+                    <ul>
+                        <li><span>Beat the eggs: </span>In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. You can add a tablespoon of water or milk for a fluffier texture.</li>
+                        <li><span>Heat the pan: </span>Place a non-stick frying pan over medium heat and add butter or oil.</li>
+                        <li><span>Cook the omelette: </span>Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly coat the surface.</li>
+                        <li><span>Add fillings (optional): </span>When the eggs begin to set at the edges but are still slightly runny in the middle, sprinkle your chosen fillings over one half of the omelette.</li>
+                        <li><span>Fold and serve: </span>As the omelette continues to cook, carefully lift one edge and fold it over the fillings. Let it cook for another minute, then slide it onto a plate.</li>
+                        <li><span>Enjoy: </span>Serve hot, with additional salt and pepper if needed.</li>
+                    </ul>
+                </div>
+                <hr>
             </div>
         </div>
     </div>
