--- a/index.html
+++ b/index.html
@@ -54,6 +54,30 @@
                     </ul>
                 </div>
                 <hr>
+                <div class="Nutrition">
+                    <h3>Nutrition</h3>
+                    <p>The table below shows nutritional values per serving without the additional fillings.</p>
+                    <table>
+                        <tbody>
+                            <tr>
+                                <td>Calories</td>
+                                <td>277kcal</td>
+                            </tr>
+                            <tr>
+                                <td>Carbs</td>
+                                <td>0g</td>
+                            </tr>
+                            <tr>
+                                <td>Protein</td>
+                                <td>20g</td>
+                            </tr>
+                            <tr>
+                                <td>Fat</td>
+                                <td>22g</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
